--- a/front-end/public/locales/es/translation.json
+++ b/front-end/public/locales/es/translation.json
@@ -79,6 +79,10 @@
         "email": "Correo electrónico *",
         "password1": "Contraseña *",
         "password2": "Repetir contraseña *"
+      },
+      "toastMessage": {
+        "success": "Cuenta creada correctamente",
+        "fail": "El correo electrónico proporcionado ya está en uso"
       }
     },
     "login": {
@@ -167,5 +171,6 @@
     "password": "La contraseña no puede estar vacía",
     "email": "El valor ingresado debe ser un correo electrónico",
     "mismatch": "Las contraseñas no coinciden"
-  }
+  },
+  "serverError": "El sistema ha encontrado un error interno"
 }
