--- a/front-end/public/locales/fr/translation.json
+++ b/front-end/public/locales/fr/translation.json
@@ -5,7 +5,7 @@
     "delete": {
       "userTitle": "Supprimer votre compte",
       "urlTitle": "Supprimer votre URL",
-      "placeholder": "Entrez le mot de passe pour confirmer",
+      "text": "Appuyez sur le bouton pour confirmer la suppression",
       "button": "Confirmer la suppression"
     }
   },
