FE [FIX] - Solve showing form url error and add toast notify

--- a/front-end/public/locales/en/translation.json
+++ b/front-end/public/locales/en/translation.json
@@ -7,7 +7,8 @@
       "urlTitle": "Delete your url",
       "text": "Press the button to confirm the delete",
       "button": "Confirm delete"
-    }
+    },
+    "passwordFail": "Wrong password"
   },
   "homePage": {
     "main": {
