--- a/front-end/public/locales/de/translation.json
+++ b/front-end/public/locales/de/translation.json
@@ -7,7 +7,8 @@
       "urlTitle": "Ihre URL löschen",
       "text": "Drücken Sie die Taste, um den Löschvorgang zu bestätigen",
       "button": "Löschen bestätigen"
-    }
+    },
+    "passwordFail": "Falsches Passwort"
   },
   "homePage": {
     "main": {
