--- a/front-end/public/locales/es/translation.json
+++ b/front-end/public/locales/es/translation.json
@@ -7,7 +7,8 @@
       "urlTitle": "Eliminar tu URL",
       "text": "Pulse el botón para confirmar la eliminación",
       "button": "Confirmar eliminación"
-    }
+    },
+    "passwordFail": "Contraseña incorrecta"
   },
   "homePage": {
     "main": {
