--- a/front-end/public/locales/fr/translation.json
+++ b/front-end/public/locales/fr/translation.json
@@ -7,7 +7,8 @@
       "urlTitle": "Supprimer votre URL",
       "text": "Appuyez sur le bouton pour confirmer la suppression",
       "button": "Confirmer la suppression"
-    }
+    },
+    "passwordFail": "Mot de passe incorrect"
   },
   "homePage": {
     "main": {
